--- a/Script/3-ClassificationModel_Pipeline.ipynb
+++ b/Script/3-ClassificationModel_Pipeline.ipynb
@@ -632,7 +632,15 @@
     "                                    'accuracy': make_scorer(accuracy_score)}\n",
     "                            )\n",
     "\n",
-    "print(scores_SVC)"
+    "print(scores_SVC)\n",
+    "print(\"Mean f-score: \" + str(np.mean(scores_SVC['test_fscore'])))\n",
+    "print(\"Mean accuracy: \" + str(np.mean(scores_SVC['test_accuracy'])))\n",
+    "print()\n",
+    "print(\"AdaBoost-results:\")\n",
+    "print(\"Carlotta: \" + str(scores_SVC['test_fscore'][0]))\n",
+    "print(\"Irene: \" + str(scores_SVC['test_fscore'][1]))\n",
+    "print(\"Leo: \" + str(scores_SVC['test_fscore'][2]))\n",
+    "print(\"Lorenzo: \" + str(scores_SVC['test_fscore'][3]))"
    ]
   },
   {
@@ -681,47 +689,41 @@
    "outputs": [],
    "source": [
     "\n",
-    "plt.figure(figsize=(10, 6))\n",
+    "# Create an instance of the Gradient Boosting Classifier with desired parameters\n",
+    "classifier_GB = GradientBoostingClassifier(n_estimators=20, learning_rate=0.1, max_depth=50)\n",
     "\n",
-    "results = pd.DataFrame(columns=['X', 'Mean', 'Min', 'Max'])\n",
+    "# Other parts of the code remain the same\n",
+    "scaler = RobustScaler()\n",
+    "feat_sel = SelectKBest(k=2)\n",
     "\n",
-    "for i in range(1, 50, 1):\n",
-    "    # Create an instance of the Gradient Boosting Classifier with desired parameters\n",
-    "    classifier_GB = GradientBoostingClassifier(n_estimators=20, learning_rate=0.1, max_depth=i)\n",
+    "# Use the Gradient Boosting classifier in the pipeline\n",
+    "estimators_GB = [('scaling', scaler), ('feature-selection', feat_sel), ('clf', classifier_GB)]\n",
+    "pipe_GB = Pipeline(estimators_GB)\n",
     "\n",
-    "    # Other parts of the code remain the same\n",
-    "    scaler = RobustScaler()\n",
-    "    feat_sel = SelectKBest(k=2)\n",
+    "# Assuming X, y, loso_cv, and groups are defined before this point\n",
     "\n",
-    "    # Use the Gradient Boosting classifier in the pipeline\n",
-    "    estimators_GB = [('scaling', scaler), ('feature-selection', feat_sel), ('clf', classifier_GB)]\n",
-    "    pipe_GB = Pipeline(estimators_GB)\n",
+    "# Perform cross-validation using Leave-One-Group-Out (LOSO) strategy\n",
+    "scores_GB = cross_validate(pipe_GB,\n",
+    "                        X,\n",
+    "                        y,\n",
+    "                        return_estimator=True,\n",
+    "                        cv=LeaveOneGroupOut(),\n",
+    "                        n_jobs=-1,\n",
+    "                        groups=groups,\n",
+    "                        error_score=\"raise\",\n",
+    "                        scoring={'fscore': make_scorer(f1_score, average='weighted'),\n",
+    "                                    'accuracy': make_scorer(accuracy_score)}\n",
+    "                        )\n",
     "\n",
-    "    # Assuming X, y, loso_cv, and groups are defined before this point\n",
-    "\n",
-    "    # Perform cross-validation using Leave-One-Group-Out (LOSO) strategy\n",
-    "    scores_GB = cross_validate(pipe_GB,\n",
-    "                            X,\n",
-    "                            y,\n",
-    "                            return_estimator=True,\n",
-    "                            cv=LeaveOneGroupOut(),\n",
-    "                            n_jobs=-1,\n",
-    "                            groups=groups,\n",
-    "                            error_score=\"raise\",\n",
-    "                            scoring={'fscore': make_scorer(f1_score, average='weighted'),\n",
-    "                                        'accuracy': make_scorer(accuracy_score)}\n",
-    "                            )\n",
-    "\n",
-    "    new_row = pd.DataFrame({\n",
-    "        'X': [i],\n",
-    "        'Mean': [np.mean(scores_SVC['test_fscore'])],\n",
-    "        'Min': [np.min(scores_SVC['test_fscore'])],\n",
-    "        'Max': [np.max(scores_SVC['test_fscore'])]\n",
-    "    })\n",
-    "\n",
-    "    results = pd.concat([results, new_row], ignore_index=True)\n",
-    "\n",
-    "print(scores_GB)"
+    "print(scores_GB)\n",
+    "print(\"Mean f-score: \" + str(np.mean(scores_GB['test_fscore'])))\n",
+    "print(\"Mean accuracy: \" + str(np.mean(scores_GB['test_accuracy'])))\n",
+    "print()\n",
+    "print(\"AdaBoost-results:\")\n",
+    "print(\"Carlotta: \" + str(scores_GB['test_fscore'][0]))\n",
+    "print(\"Irene: \" + str(scores_GB['test_fscore'][1]))\n",
+    "print(\"Leo: \" + str(scores_GB['test_fscore'][2]))\n",
+    "print(\"Lorenzo: \" + str(scores_GB['test_fscore'][3]))"
    ]
   },
   {
@@ -795,7 +797,15 @@
     "                                     'accuracy': make_scorer(accuracy_score)}\n",
     "                            )\n",
     "\n",
-    "print(scores_SGD)"
+    "print(scores_SGD)\n",
+    "print(\"Mean f-score: \" + str(np.mean(scores_SGD['test_fscore'])))\n",
+    "print(\"Mean accuracy: \" + str(np.mean(scores_SGD['test_accuracy'])))\n",
+    "print()\n",
+    "print(\"AdaBoost-results:\")\n",
+    "print(\"Carlotta: \" + str(scores_SGD['test_fscore'][0]))\n",
+    "print(\"Irene: \" + str(scores_SGD['test_fscore'][1]))\n",
+    "print(\"Leo: \" + str(scores_SGD['test_fscore'][2]))\n",
+    "print(\"Lorenzo: \" + str(scores_SGD['test_fscore'][3]))"
    ]
   },
   {
@@ -872,7 +882,15 @@
     "                                         'accuracy': make_scorer(accuracy_score)}\n",
     "                                )\n",
     "\n",
-    "print(scores_SGD_rbf)"
+    "print(scores_SGD_rbf)\n",
+    "print(\"Mean f-score: \" + str(np.mean(scores_SGD_rbf['test_fscore'])))\n",
+    "print(\"Mean accuracy: \" + str(np.mean(scores_SGD_rbf['test_accuracy'])))\n",
+    "print()\n",
+    "print(\"AdaBoost-results:\")\n",
+    "print(\"Carlotta: \" + str(scores_SGD_rbf['test_fscore'][0]))\n",
+    "print(\"Irene: \" + str(scores_SGD_rbf['test_fscore'][1]))\n",
+    "print(\"Leo: \" + str(scores_SGD_rbf['test_fscore'][2]))\n",
+    "print(\"Lorenzo: \" + str(scores_SGD_rbf['test_fscore'][3]))\n"
    ]
   },
   {
