--- a/Script/4-Performance_Evaluation.ipynb
+++ b/Script/4-Performance_Evaluation.ipynb
@@ -410,7 +410,8 @@
    "outputs": [],
    "source": [
     "y_pred_tree = pipe_AdaBoost_tree['clf'].estimators_[0].estimators_[31].predict(tree_test_scaled)\n",
-    "cm = confusion_matrix(y_test, y_pred_tree)"
+    "cm = confusion_matrix(y_test, y_pred_tree)\n",
+    "print(cm)"
    ]
   },
   {
@@ -436,6 +437,13 @@
    "source": [
     "scatter_plot(scaled_lorenzo, feature1, feature2, 'Lorenzo')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
